--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -23,6 +23,14 @@ jobs:
           distribution: 'temurin'
           java-version: 21
 
+      - name: Extract Minecraft Version from fabric.mod.json
+        id: extract_version
+        run: |
+          # Utilise jq pour lire le fichier fabric.mod.json et extraire la version
+          mc_version=$(jq -r '.minecraft[0]' fabric.mod.json)
+          echo "Minecraft Version: $mc_version"
+          echo "MC_VERSION=$mc_version" >> $GITHUB_ENV  # Rendre la version disponible dans les étapes suivantes
+
       - name: Build with Gradle
         run: ./gradlew build
 
@@ -30,7 +38,7 @@ jobs:
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
-          automatic_release_tag: snapshot
+          automatic_release_tag: ${{ env.MC_VERSION }}
           prerelease: true
           title: Dev Build
           files: |
