--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Extract Minecraft Version from fabric.mod.json
         id: extract_version
         run: |
-          mc_version=$(jq -r '.minecraft[0]' src/main/resources/fabric.mod.json)
-          echo "Minecraft Version: $mc_version"
-          echo "MC_VERSION=$mc_version" >> $GITHUB_ENV  # Rendre la version disponible dans les étapes suivantes
+          mc_version=$(jq -r '.depends.minecraft[0]' src/main/resources/fabric.mod.json)
+          echo "Minecraft Version is $mc_version"
+          echo "MC_VERSION=$mc_version" >> $GITHUB_ENV
 
       - name: Build with Gradle
         run: ./gradlew build
