--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -29,18 +29,17 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Extract Minecraft Version from fabric.mod.json
-        id: extract_version
+      - name: Get Minecraft Version
+        id: get_minecraft_version
         run: |
-          mc_version=$(jq -r '.depends.minecraft[0]' src/main/resources/fabric.mod.json)
-          echo "Minecraft Version is $mc_version"
-          echo "MC_VERSION=$mc_version" >> $GITHUB_ENV
+          minecraft_version=$(grep 'minecraft_version=' gradle.properties | cut -d'=' -f2)
+          echo "minecraft_version=$minecraft_version" >> $GITHUB_ENV
 
       - name: Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
-          automatic_release_tag: ${{ env.MC_VERSION }}
+          automatic_release_tag: ${{ env.minecraft_version }}
           prerelease: true
           title: Dev Build
           files: |
