--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -23,8 +23,8 @@ jobs:
           distribution: 'temurin'
           java-version: 21
 
-      - name: Clean Gradle cache
-        run: ./gradlew clean build --refresh-dependencies
+      #- name: Clean Gradle cache
+        #run: ./gradlew clean build --refresh-dependencies
 
       - name: Build with Gradle
         run: ./gradlew build
@@ -35,11 +35,17 @@ jobs:
           minecraft_version=$(grep 'minecraft_version=' gradle.properties | cut -d'=' -f2)
           echo "minecraft_version=$minecraft_version" >> $GITHUB_ENV
 
+      - name: Get Mod Version
+        id: get_mod_version
+        run: |
+          mod_version=$(grep 'mod_version=' gradle.properties | cut -d'=' -f2)
+          echo "mod_version=$mod_version" >> $GITHUB_ENV
+
       - name: Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
-          automatic_release_tag: ${{ env.minecraft_version }}
+          automatic_release_tag: "${{ env.minecraft_version }} ${{ env.mod_version }}"
           prerelease: true
           title: Dev Build
           files: |
