--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -45,7 +45,7 @@ jobs:
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
-          automatic_release_tag: "${{ env.minecraft_version }} ${{ env.mod_version }}"
+          automatic_release_tag: "${{ env.minecraft_version }}-${{ env.mod_version }}"
           prerelease: true
           title: Dev Build
           files: |
