--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.jvmargs=-Xmx2G
 minecraft_version=1.21.4
 yarn_mappings=1.21.4+build.7
 loader_version=0.16.9
+fabric_api_version=0.119.2+1.21.4
 
 # Mod Properties
 mod_version=0.1.4
